--- a/Cart.html
+++ b/Cart.html
@@ -25,12 +25,11 @@
         </div>
 
         <div class="content">
-            <h1>Festival International</h1>
-            <p>Walk, jog or run through the historic tree-lined streets of downtown Lafayette on the Saturday morning of Festival International. <br> Cross the finish line with live music, food, and beer! </p>
+            <h1>Shopping Cart</h1>
+            <p>Review your selected items before purchasing.</p>
             
             <div>
-                <button type="button"><span></span>LOG IN</button>
-                <button type="button"><span></span>SIGN UP</button>
+                <p>INSERT CART FUNCTIONALITY</p>
             </div>
         </div>
 
