--- a/ContactUs.html
+++ b/ContactUs.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="icon" href="http://example.com/favicon.png"> <!--CHANGE FAVICON IMAGE-->
+    <link rel="icon" type="image/x-icon" href="C:\Users\colli\Documents\490\CMPS490-Project-main\running-icon-22.png"> <!--CHANGE FAVICON IMAGE-->
     <link rel="stylesheet" href="style.css">
     <title>FIL 5K Run</title>
 </head>
@@ -25,12 +25,12 @@
         </div>
 
         <div class="content">
-            <h1>Festival International</h1>
-            <p>Walk, jog or run through the historic tree-lined streets of downtown Lafayette on the Saturday morning of Festival International. <br> Cross the finish line with live music, food, and beer! </p>
+            <h1>Reach out to us!</h1>
+            <p>We welcome any and all feedback from our valued patrons!<br>ADD COPY TO CLIPBOARD FUNCTION</p>
             
             <div>
-                <button type="button"><span></span>LOG IN</button>
-                <button type="button"><span></span>SIGN UP</button>
+                <button class="email" type="button"><span></span></button>
+                <button class="phone" type="button"><span></span></button>
             </div>
         </div>
 
