--- a/Merchandise.html
+++ b/Merchandise.html
@@ -29,8 +29,8 @@
             <p>Walk, jog or run through the historic tree-lined streets of downtown Lafayette on the Saturday morning of Festival International. <br> Cross the finish line with live music, food, and beer! </p>
             
             <div>
-                <button type="button"><span></span>LOG IN</button>
-                <button type="button"><span></span>SIGN UP</button>
+                <img src="hat.jpg" alt="hat">
+                <h1>GET ONE OF THESE HAT FOR 1,000,000 POINTS!</h1>
             </div>
         </div>
 
