--- a/PointSystem.html
+++ b/PointSystem.html
@@ -25,13 +25,13 @@
         </div>
 
         <div class="content">
-            <h1>Festival International</h1>
-            <p>Walk, jog or run through the historic tree-lined streets of downtown Lafayette on the Saturday morning of Festival International. <br> Cross the finish line with live music, food, and beer! </p>
-            
-            <div>
-                <button type="button"><span></span>LOG IN</button>
-                <button type="button"><span></span>SIGN UP</button>
-            </div>
+            <h1>This will help you keep track of your points and see what benefits you qualify for.</h1>
+            <p>Cash in your points for anything on the Merchandise tab! </p>
+
+            <div class="progress">
+                <div class="progress-value"></div>
+              </div>
+              
         </div>
 
 
