--- a/RaceResults.html
+++ b/RaceResults.html
@@ -25,12 +25,13 @@
         </div>
 
         <div class="content">
-            <h1>Festival International</h1>
-            <p>Walk, jog or run through the historic tree-lined streets of downtown Lafayette on the Saturday morning of Festival International. <br> Cross the finish line with live music, food, and beer! </p>
+            <h1>Last Year's Winners!</h1>
+            <p>Take a look at the previous 5k's top runners.</p>
             
-            <div>
-                <button type="button"><span></span>LOG IN</button>
-                <button type="button"><span></span>SIGN UP</button>
+            <div class="results">
+                <button class="first" type="button"><span></span>First</button>
+                <button class="second" type="button"><span></span>Second</button>
+                <button class="third" type="button"><span></span>Third</button>
             </div>
         </div>
 
