--- a/Donate.html
+++ b/Donate.html
@@ -25,12 +25,11 @@
         </div>
 
         <div class="content">
-            <h1>Festival International</h1>
-            <p>Walk, jog or run through the historic tree-lined streets of downtown Lafayette on the Saturday morning of Festival International. <br> Cross the finish line with live music, food, and beer! </p>
+            <h1>Help support the 5k and Festival by donating today!</h1>
+            <p>All donations will provide you with 50 points!</p>
             
             <div>
-                <button type="button"><span></span>LOG IN</button>
-                <button type="button"><span></span>SIGN UP</button>
+                <button type="button"><span></span>Donate Here!</button>
             </div>
         </div>
 
