--- a/Index.html
+++ b/Index.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="icon" href="http://example.com/favicon.png"> <!--CHANGE FAVICON IMAGE-->
+    <link rel="icon" type="image/x-icon" href="C:\Users\colli\Documents\490\CMPS490-Project-main\running-icon-22.png"> <!--CHANGE FAVICON IMAGE-->
     <link rel="stylesheet" href="style.css">
     <title>FIL 5K Run</title>
 </head>
@@ -21,7 +21,6 @@
                 <li> <a href="RaceResults.html">Race Results</a> </li>
                 <li> <a href="ContactUs.html">Contact Us</a> </li>
                 <li> <a href="Cart.html">Cart</a> </li>
-                <li> <a href="signup.html">Sign Up</a> </li>
 
             </ul>
         </div>
