--- a/Cart.html
+++ b/Cart.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="icon" href="http://example.com/favicon.png"> <!--CHANGE FAVICON IMAGE-->
+    <link rel="icon" type="image/x-icon" href="FIL Logomark_REVERSED_WEB.png">
     <link rel="stylesheet" href="cartstyle.css">
     <script src="store.js" async></script>
     <title>FIL 5K Run</title>
@@ -12,25 +12,28 @@
     
     <div class="banner">
         <div class="navbar">
-            <img src="running-icon-22.png" class="logo">
+            <a href="Index.html"><img src="FIL Logomark_REVERSED_WEB.png" class="logo"></a>
             <ul>
                 <li> <a href="Index.html">Home</a> </li>
                 <li> <a href="MyAccount.html">My Account</a> </li>
                 <li> <a href="Donate.html">Donate</a> </li>
-                <li> <a href="PointSystem.html">Point System</a> </li>
-                <li> <a href="Merchandise.html">Merchandise</a> </li>
                 <li> <a href="RaceResults.html">Race Results</a> </li>
-                <li> <a href="ContactUs.html">Contact Us</a> </li>
                 <li> <a href="Cart.html">Cart</a> </li>
             </ul>
         </div>
+
+        <div class="navbarfooter">
+            <a href="Index.html">About Us/Additional Info</a>
+            <a href="https://www.cgi.com/en">Sponsor</a>
+            <a href="ContactUs.html">Contact</a>
+          </div>
 
         <section class="container content-section">
             <h2 class="section-header">MERCH</h2>
             <div class="shop-items">
                 <div class="shop-item">
                     <span class="shop-item-title">T-Shirt</span>
-                    <img class="shop-item-image" src="Images/Shirt.png">
+                    <img class="shop-item-image" src="hat.jpg">
                     <div class="shop-item-details">
                         <span class="shop-item-price">$19.99</span>
                         <button class="btn btn-primary shop-item-button" type="button">ADD TO CART</button>
@@ -38,7 +41,7 @@
                 </div>
                 <div class="shop-item">
                     <span class="shop-item-title">Coffee Cup</span>
-                    <img class="shop-item-image" src="Images/Cofee.png">
+                    <img class="shop-item-image" src="hat.jpg">
                     <div class="shop-item-details">
                         <span class="shop-item-price">$6.99</span>
                         <button class="btn btn-primary shop-item-button" type="button">ADD TO CART</button>
