--- a/MyAccount.html
+++ b/MyAccount.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="icon" href="http://example.com/favicon.png"> <!--CHANGE FAVICON IMAGE-->
+    <link rel="icon" type="image/x-icon" href="FIL Logomark_REVERSED_WEB.png">
     <link rel="stylesheet" href="style.css">
     <title>FIL 5K Run</title>
 </head>
@@ -11,18 +11,21 @@
     
     <div class="banner">
         <div class="navbar">
-            <img src="running-icon-22.png" class="logo">
+            <a href="Index.html"><img src="FIL Logomark_REVERSED_WEB.png" class="logo"></a>
             <ul>
                 <li> <a href="Index.html">Home</a> </li>
                 <li> <a href="MyAccount.html">My Account</a> </li>
                 <li> <a href="Donate.html">Donate</a> </li>
-                <li> <a href="PointSystem.html">Point System</a> </li>
-                <li> <a href="Merchandise.html">Merchandise</a> </li>
                 <li> <a href="RaceResults.html">Race Results</a> </li>
-                <li> <a href="ContactUs.html">Contact Us</a> </li>
                 <li> <a href="Cart.html">Cart</a> </li>
             </ul>
         </div>
+
+        <div class="navbarfooter">
+            <a href="Index.html">About Us/Additional Info</a>
+            <a href="https://www.cgi.com/en">Sponsor</a>
+            <a href="ContactUs.html">Contact</a>
+          </div>
 
         <div class="content">
             <h1>Festival International</h1>
