--- a/signup.html
+++ b/signup.html
@@ -12,20 +12,20 @@
     
     <div class="banner">
         <div class="navbar">
-            <a href="Index.html"><img src="FIL Logomark_REVERSED_WEB.png" class="logo"></a>
+            <a href="Index.php"><img src="FIL Logomark_REVERSED_WEB.png" class="logo"></a>
             <ul>
-                <li> <a href="Index.html">Home</a> </li>
-                <li> <a href="MyAccount.html">My Account</a> </li>
-                <li> <a href="Donate.html">Donate</a> </li>
-                <li> <a href="RaceResults.html">Race Results</a> </li>
-                <li> <a href="Cart.html">Cart</a> </li>
+                <li> <a href="Index.php">Home</a> </li>
+                <li> <a href="MyAccount.php?username=<?php echo urlencode($username); ?>">My Account</a></li>
+                <li> <a href="Donate.php">Donate</a> </li>
+                <li> <a href="RaceResults.php">Race Results</a> </li>
+                <li> <a href="Cart.php">Cart</a> </li>
             </ul>
         </div>
 
         <div class="navbarfooter">
-            <a href="Index.html">About Us/Additional Info</a>
+            <a href="Index.php">About Us/Additional Info</a>
             <a href="https://www.cgi.com/en">Sponsor</a>
-            <a href="ContactUs.html">Contact</a>
+            <a href="ContactUs.php">Contact</a>
           </div>
 
         <div class="content">
