--- a/AboutUs.html
+++ b/AboutUs.html
@@ -1,13 +1,3 @@
-<?php
-// Start the PHP session
-session_start();
-
-// Check if a username is set in the session
-if(isset($_SESSION['username'])) {
-    $username = $_SESSION['username'];
-}
-?>
-
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -15,6 +5,7 @@ if(isset($_SESSION['username'])) {
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="icon" type="image/x-icon" href="FIL Logomark_REVERSED_WEB.png">
     <link rel="stylesheet" href="style.css">
+    <script src="store.js" async></script>
     <title>FIL 5K Run</title>
 </head>
 <body>
@@ -24,20 +15,12 @@ if(isset($_SESSION['username'])) {
             <a href="Index.php"><img src="FIL Logomark_REVERSED_WEB.png" class="logo"></a>
             <ul>
                 <li> <a href="Index.php">Home</a> </li>
-                <?php
-                // Check if the username is set in the session
-                if(isset($username)) {
-                    // Display My Account with the username if set
-                    echo '<li> <a href="MyAccount.php?username=' . urlencode($username) . '">My Account</a></li>';
-                } else {
-                    // Display the regular link if not set
-                    echo '<li> <a href="MyAccount.php">My Account</a> </li>';
-                }
-                ?>
                 <li> <a href="Events.html">Events</a> </li>
-                <li> <a href="Donate.php">Donate</a> </li>
+                <li> <a href="MyAccount.php">My Account</a> </li>
+                <li> <a href="Donate.html">Donate</a> </li>
                 <li> <a href="RaceResults.php">Race Results</a> </li>
                 <li> <a href="Cart.php">Cart</a> </li>
+
             </ul>
         </div>
         <div id="confettis">
@@ -55,18 +38,14 @@ if(isset($_SESSION['username'])) {
         <div class="navbarfooter">
             <a href="AboutUs.html">About Us/Additional Info</a>
             <a href="https://www.cgi.com/en">Sponsor</a>
-            <a href="ContactUs.php">Contact</a>
-          </div>
+            <a href="ContactUs.html">Contact</a>
+          </div>  
 
         <div class="content">
-            <h1>Last Year's Winners!</h1>
-            <p>Take a look at the previous 5k's top runners.</p>
-            
-            <div class="results">
-                <button class="first" type="button"><span></span></button>
-                <button class="second" type="button"><span></span></button>
-                <button class="third" type="button"><span></span></button>
-            </div>
+            <h1>Festival International</h1>
+            <h2>Festival International de Louisiane is a premiere International music and arts festival known for bringing a variety of unique and emerging  performers to Louisiana. 
+                <br>The 501 (C) (3) organization is committed to maintaining the festival as non-ticketed and free to the general public.</br>  
+                The family-oriented event is held each year in downtown Lafayette,  Louisiana. Our loyal audience, comprised of local, national and  international patrons, return year after year.</h2>
         </div>
 
 
@@ -81,5 +60,6 @@ if(isset($_SESSION['username'])) {
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <script type="module" src="your-module.js"></script>
 </body>
 </html>
