--- a/signup.html
+++ b/signup.html
@@ -14,6 +14,7 @@
         <div class="navbar">
             <a href="Index.php"><img src="FIL Logomark_REVERSED_WEB.png" class="logo"></a>
             <ul>
+                <li> <a href="Events.html">Events</a> </li>
                 <li> <a href="Index.php">Home</a> </li>
                 <li> <a href="MyAccount.php?username=<?php echo urlencode($username); ?>">My Account</a></li>
                 <li> <a href="Donate.php">Donate</a> </li>
