--- a/Events.html
+++ b/Events.html
@@ -12,14 +12,14 @@
     
     <div class="banner">
         <div class="navbar">
-            <a href="Index.php"><img src="FIL Logomark_REVERSED_WEB.png" class="logo"></a>
+            <a href="Index.html"><img src="FIL Logomark_REVERSED_WEB.png" class="logo"></a>
             <ul>
-                <li> <a href="Index.php">Home</a> </li>
+                <li> <a href="Index.html">Home</a> </li>
                 <li> <a href="Events.html">Events</a> </li>
-                <li> <a href="MyAccount.php">My Account</a> </li>
-                <li> <a href="Donate.php">Donate</a> </li>
-                <li> <a href="RaceResults.php">Race Results</a> </li>
-                <li> <a href="Cart.php">Cart</a> </li>
+                <li> <a href="MyAccount.html">My Account</a> </li>
+                <li> <a href="Donate.html">Donate</a> </li>
+                <li> <a href="RaceResults.html">Race Results</a> </li>
+                <li> <a href="Cart.html">Cart</a> </li>
 
             </ul>
         </div>
