--- a/signup.html
+++ b/signup.html
@@ -32,24 +32,33 @@
         <div class="content">
             <h1>Sign Up for 5K Run</h1>
             <form action="signup_process.php" method="post">
-                <div class="form-group">
-                    <label for="username">Username:</label>
-                    <input type="text" id="username" name="username" class="form-control" required>
-                </div>
-                <div class="form-group">
-                    <label for="email">Email:</label>
-                    <input type="email" id="email" name="email" class="form-control" required>
-                </div>
-                <div class="form-group">
-                    <label for="password">Password:</label>
-                    <input type="password" id="password" name="password" class="form-control" required>
+                <div class="container">
+                    <div class="row justify-content-center">
+                        <div class="col-md-6">
+                            <form action="signup_process.php" method="post">
+                                <div class="form-group">
+                                    <label for="username">Username:</label>
+                                    <input type="text" id="username" name="username" class="form-control" required>
+                                </div>
+                                <div class="form-group">
+                                    <label for="email">Email:</label>
+                                    <input type="email" id="email" name="email" class="form-control" required>
+                                </div>
+                                <div class="form-group">
+                                    <label for="password">Password:</label>
+                                    <input type="password" id="password" name="password" class="form-control" required>
+                                </div>
+                                <button type="submit" class="btn btn-primary">SIGN UP</button>
+                            </form>
+                            <p class="mt-3">Already have an account? <a href="login.html">Log in</a></p>
+                        </div>
+                    </div>
                 </div>
                 <a href="MyAccount.html">
-                    <button type="submit" class="btn btn-primary">SIGN UP</button>
                 </a>
             
             </form>
-            <p>Already have an account? <a href="login.html">Log in</a></p>
+            
         </div>
     </div>
 
